--- a/style.css
+++ b/style.css
@@ -1,152 +1,270 @@
 * {
-    margin: 10px;
+    margin: 0px;
     padding: 0px;
     box-sizing: border-box
     
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+
 body {
-    font-family: 'Poppins', sans-serif;
-    padding: 5px;
-    
-    
+    font-family: 'Poppins', sans-serif; 
+    color: rgb(116, 9, 101);
+    padding: 10px 
 }
 
 header {
     display: flex;
     width: 100%;
-    margin: auto;
-    
+    margin: auto; 
 }
 
-div {
-    background:rgb(255, 225, 199);
-    flex: 2;
-    width: bold;
-    font-family: cursive;
-   
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color:rgb(116, 9, 101);
+    color:rgb(255, 225, 199);
 }
+
+footer section {
+    display: flex;
+    flex-direction: column;
+    padding: 1px 2px;
+   
+
+}
+
+footer h2 {
+    display: flex;
+    color: rgb(255, 225, 199); 
+    width: fit-content;
+    margin: 2rem auto; 
+    font-size: 25px;
+}
+
+footer section > ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: rgb(255, 225, 199);
+    font-size: 25px; 
+    margin-left: 350px;  
+    margin-bottom: 15px; 
+
+}
+
+footer i {
+    font-size: 32px;
+    color: rgb(255, 225, 199);
+}
+ 
+
+
 
 /*===============TAG SELECTOR====================*/
+a {
+    color: rgb(255, 225, 199);
+}
+
+a.active {
+    background-color: rgb(116, 9, 101);
+}
+
+
+form {
+    display: block;
+    padding: 20px 5px;
+    margin-left: 200px;
+    font-size: 20px;
+   
+} 
+
+h1 {
+    font-size: 36px;
+    background-color: rgb(116, 9, 101); 
+    font-weight: 900;
+    /* margin-right: 1500px; */
+    width: fit-content;
+    margin-bottom: 10px;
+    padding: 0px 8px;
+}
+
+h2 {
+    font-size: 30px;
+    font-weight: 400;
+    margin-bottom: 5px;
+    margin-top: 0px;
+}
 
 p {
-    color: rgb(116, 9, 101);
-    width: bold;
-    background:rgb(255, 225, 199);
-    font-family: cursive;
-    padding: 5px;
+
+    font-family: 'Poppins', sans-serif;
+    /* padding: 5px; */
+    font-size: 20px;
 }
+
+
 
 /*===============CLASS SELECTOR===================*/
-
-.profile-pic {
-    width: 200px;
-    
-}
-
-.pink-border {
-    border: 8px solid rgb(179, 28, 158);
-    
-}
-.border {
-    border: 7px solid rgb(179, 28, 158);
-    border-radius: 10px;
-    padding: 5px;
-
-}
-
-.contact {
-    background-size: 40px;
-    margin-block: 40px;
-    
-}
-.container {
-    width: 50px;
-    height: 50px;
-    overflow-y: hidden;
+.ul-flex {
     display: flex;
-    background-color:rgb(255, 225, 199);
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-}
-.container .item {
-    flex: 0 0 50px;
-    width: 50px;
-    display: inline-flex;
-    justify-content: right;
-    font-weight:400;
-    font-size: 3rem;
-    background-color:rgb(255, 225, 199);
-    scroll-snap-align: end;
+    justify-content: space-evenly;
+    font-size: 30px;
+    font-weight: bolder;
+    list-style: none; 
 }
 
-.smallerfont {
+.banner {
+    display: flex;
+    flex-direction:column;
+    align-content: center;
+    justify-content: center;
+    padding: 10px;
+    background: url(images/pinktreeinwater.jpeg) no-repeat center center fixed;
+    background-size: cover;
+    color:rgb(255, 225, 199);
+    margin-top: 20px;
+    height: 500px;
+}
+.profile-pic {
+    display: flex;
+    width: 400px;
+    border-radius: 900px;
+    margin-top: 10px;
+    
+    /* float: right; */
+    
+}
+    
+.border {
+    border: 7px solid rgb(116, 9, 101);
+    min-height: 100vh;
+    
+}
+
+ .background {
+     background-color: rgb(184, 176, 176);
+ }
+    
+
+.container {
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    min-height: 100vh;
+}
+
+.about-me-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-top: 1rem;
+    padding-left: 2rem;  
+    /* align-items: center; */
+}
+
+
+.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    /* margin: 3rem 0; */
+}
+
+
+.column-1 {
+    width: 60%;  
+    display: flex;
+    flex-direction: column;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+
+}
+
+.column-list {
+    display: flex;
+    flex-direction: row;
+    font-size: 25px;
+    margin-bottom: 16px;
+
+}
+
+.column-1 section { 
+    display: flex;
+    flex-direction: column;
+    margin:auto 5rem; 
+} 
+
+.experience-section {
+    padding-top: 1rem;
+    padding-left: 2rem;
+    align-items: center;
+    font-weight: 400;
+}
+.project-card img {
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
+    height:300px;
+    margin-top: 50px;  
+    margin-left: 100px; 
+}
+
+.project-card p {
+    padding-right: 40px;
+    padding-bottom: 20px;
+}
+
+.projects {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; 
+    padding-top: 1rem;
+    padding-left: 2rem;  
+}
+
+#button {
+    background-color: rgb(116, 9, 101);
+    color:rgb(255, 225, 199);
+    border: 2px solid rgb(255, 225, 199);
+    padding: 8px; 
+    margin-top: 16px; 
+    width:fit-content;
     font-size: 15px;
 }
 
-.smallfont {
-    font-size: 20px;
+.fa-brands{
+    font-family: "Font Awesome 6 Brands";
+    font-weight: 400;
 }
 
-.mediumfont {
-    font-size: 30px;
+.social-media {
+    list-style: none; 
 }
 
-.fw-bolder {
-    font-weight: bold;
+.icon-size {
+    width: 32px;
+    height: 32px;
 }
 
-    
-.background {
-    background-image: url(images/pinktreeinwater.jpeg);
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+@media screen and (max-width: 800px) {
 
-.button {
-    background-color:rgb(255, 225, 199);
-    color:rgb(179, 28, 158);
-    font-size: 20px;
-    font-family:Arial, Helvetica, sans-serif;  
-    padding: 5px;
-    border-radius: 10px;
-    display: inline-block
-    
-}
-.button1 {
-    background-color:rgb(255, 225, 199);
-    color:rgb(179, 28, 158);
-    font-size: 20px;
-    font-family:Arial, Helvetica, sans-serif;  
-    padding: 5px;
-    border-radius: 10px;
-    display: inline-block;
-    
-      
-}
+    .row {
+        flex-direction: column;
+        gap: 2px; 
+    }
 
-.button2 {
-    background-color:rgb(255, 225, 199);
-    color:rgb(179, 28, 158);
-    font-size: 20px;
-    font-family:Arial, Helvetica, sans-serif;  
-    padding: 5px;
-    border-radius: 10px;
-    display: inline-block;
-    
-      
-}
+    .column-list {
+        flex-direction: column;
+        gap: 2px; 
+    }
 
-
-
-
-
-/*==================ID SELECTORS==================*/
-
-#UniqueID {
-    font-size: 14px;
-   
 }
 
 
